raw-manifests/local-staging/sample-dotnet/stag-1/wf-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-dotnet-wf-stag-1-vs
  namespace: istio-system
spec:
  hosts:
    - "wf-stag-1.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: sample-dotnet-wf-staging-stag-1-service.sample-dotnet-wf-staging-stag-1.svc.cluster.local
            port:
              number: 80
